# spotify-downloader

./: LICENSE  README.md  config.yaml  main.py  pyproject.toml  validate_config.py
spotify-downloader/: main.py
